add: more stuffs

--- a/blog4/ep.config
+++ b/blog4/ep.config
@@ -1,58 +1,63 @@
--- Source config 
+--* Source config 
 Endpoint ARN
 <>
 
-Endpoint engine
+--* Endpoint engine
 MySQL
 
-Endpoint type
+--* Endpoint type
 Source
 
-User name
+--* User name
 dms_rep_instance
 
-KMS ARN / ID
+--* KMS ARN / ID
 arn:aws:kms:<>
-Status
+
+--* Status
 Active
-Server name
-35.154.141.143
-Port
+
+--* Server name
+<source-ip/dns>
+
+--* Port
 3306
-SSL mode
-None
-Extra connection attributes
+
+--* SSL mode
+true
+
+--* Extra connection attributes
 BCPPacketSize=5000
 
-- Destination config
+--* Destination config
 Endpoint ARN
 <>
 
-Endpoint engine
+--* Endpoint engine
 MySQL
 
-Endpoint type
+--* Endpoint type
 Target
 
-User name
+--* User name
 cloud_user
 
-KMS ARN / ID
+--* KMS ARN / ID
 arn:aws:kms:<>
 
-Status
+--* Status
 Active
 
-Server name
+--* Server name
 <host-ip/dns>
 
-Port
+--* Port
 3306
 
-SSL mode
-None
+--* SSL mode
+true
 
-Extra connection attributes
+--* Extra connection attributes
 parallelLoadThreads=1
 controlTablesFileGroup=
 safeguardpolicy=EXCLUSIVE_AUTOMATIC_TRUNCATION
